[workspace]
members = ["crates/*"]
exclude = ["img"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["LIZARD-OFFICIAL-77"]
version = "0.0.1"
description = "mdadm wrapper with extra features"
license = "GPL-2.0-only"

[workspace.dependencies]
hyraid_mdadm = { path = "crates/hyraid_mdadm" }