[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["LIZARD-OFFICIAL-77"]
version = "0.0.1"
description = "mdadm wrapper with extra features"
license = "GPL-2.0-only"

[workspace.dependencies]
hyraid_mdadm = { path = "crates/hyraid_mdadm" }
hyraid_mapper = { path = "crates/hyraid_mapper" }
hyraid_utils = { path = "crates/hyraid_utils" }
hyraid_gpt = { path = "crates/hyraid_gpt" }
hyraid_lvm2 = { path = "crates/hyraid_lvm2" }
hyraid_json = { path = "crates/hyraid_json" }
hyraid_types = { path = "crates/hyraid_types" }
