[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["LIZARD-OFFICIAL-77"]
version = "0.1.0"
description = "mdadm wrapper with extra features"
license = "GPL-2.0-only"

[workspace.dependencies]
regex = { version = "1.11.2" }
lsblk = { version = "0.6.1" }
gpt = { version = "4.1.0" }
clap = { version = "4.5.47", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
rand = { version = "0.9.2" }
nix = { version = "0.30.1", features = ["user"] }
raid_rs = { git = "https://github.com/aero-nas/raid-rs", branch = "unstable" }

hyraid_mapper = { path = "crates/hyraid_mapper" }
hyraid_utils = { path = "crates/hyraid_utils" }
hyraid_gpt = { path = "crates/hyraid_gpt" }
hyraid_lvm2 = { path = "crates/hyraid_lvm2" }
hyraid_json = { path = "crates/hyraid_json" }
hyraid_types = { path = "crates/hyraid_types" }
