[package]
name = "hyraid"
edition.workspace = true
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
hyraid_utils = { workspace = true }
hyraid_mapper = { workspace = true }
lsblk = "0.6.1"
gpt = "4.1.0"
clap = { version = "4.5.41", features = ["derive"] }
