[package]
name = "hyraid"
edition.workspace = true
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

[features]
unittest = []

[dependencies]
hyraid_utils.workspace = true
hyraid_mapper.workspace = true

lsblk.workspace = true
gpt.workspace = true
clap.workspace = true