[package]
name = "hyraid_array"
edition.workspace = true
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
gpt = "4.1.0"
regex = "1.11.1"
lsblk = "0.6.1"
hyraid_mdadm = { workspace = true }
hyraid_lvm2 = { workspace = true }
rand = "0.9.1"