[package]
name = "hyraid_mapper"
edition.workspace = true
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
hyraid_lvm2.workspace = true
hyraid_utils.workspace = true
hyraid_json.workspace = true
hyraid_types.workspace = true
hyraid_gpt.workspace = true

raid_rs.workspace = true
gpt.workspace = true
regex.workspace = true
lsblk.workspace = true
rand.workspace = true