[package]
name = "hyraid_types"
edition.workspace = true
authors.workspace = true
version.workspace = true
description.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
hyraid_gpt = { workspace = true }
gpt = "4.1.0"
